--- a/style.css
+++ b/style.css
@@ -40,3 +40,17 @@ ul li a:hover {
   width: 194px;
   height: 30px;
  }
+
+/* Color boxy */
+ .kolor {
+  margin: 5px;
+  width: 30%;
+  height: 110px;
+  border-radius: 12%;
+  background-color: yellow;
+ }
+ #reset{
+  font-size: 50%;
+  width: 40px;
+  height: 20px;
+ }
